[package]
name = "basic-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = "debuginfo"
opt-level = 3
lto = true
codegen-units = 1


[dependencies]
bincode = "1.3.3"
chumsky = "0.9.2"
clap = { version = "4.2.4", features = ["derive"] }
console = "0.15.5"
dynfmt = { version = "0.1.5", features = ["curly"] }
rand = "0.8.5"
serde = { version = "1.0.160", features = ["rc"] }
serde_derive = "1.0.160"
